Improving Windows script